# variantum

./: .gitignore  IMPROVEMENTS.md  Makefile  README.md  TODO.md  paper.claude  pyproject.toml
analysis/: analyze_review_timing.py  analyze_reviewer_metric_signal.py  build_review_timing_notebook.py  plot_reviewer_metric_signal.py  review-timing-analysis.ipynb  review-timing-data.json  reviewer-metric-signal-summary.csv  reviewer-metric-signal.csv  vanessa-set1-metric-scatter-data.csv
cgi/: go.mod  schema.sql
data/: stephanos-review-selection-v1-cost.json  stephanos-review-selection-v1.json
httpd/: parallage-httpd.conf
migrations/: 20260704_parallage_chinese_review.sql
prompts/: stephanos-01-diplomatic-literal.txt  stephanos-02-interlinear-gloss.txt  stephanos-03-syntax-scaffold.txt  stephanos-04-minimal-inference.txt  stephanos-05-scholarly-readable.txt  stephanos-06-smooth-idiomatic.txt  stephanos-07-message-style-paraphrase.txt  stephanos-08-controlled-english.txt  stephanos-09-analyst-brief.txt  stephanos-10-plain-language.txt  stephanos-11-learners-translation.txt  stephanos-12-named-entity-explicit.txt  stephanos-13-forked-translation-lattice.txt  stephanos-14-uncertainty-annotated.txt  stephanos-15-decision-log-apparatus-first.txt  stephanos-16-adversarial-red-team.txt  stephanos-17-back-translation-audit.txt  stephanos-18-mnemonic-translation.txt  stephanos-19-alliterative-mnemonic.txt  stephanos-20-rhyming-poetry.txt  stephanos-compact-literal.txt  stephanos-idiomatic-reader.txt  stephanos-prompt-tiers.md  stephanos-scholarly-edition.txt
(+47 files in other folders)
