[project]
name = "variantum"
version = "0.1.0"
description = "Parallage prompt packs and reviewer tools"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.0.0",
    "openai>=2.11.0",
    "pdfplumber>=0.11.8",
    "psycopg2-binary>=2.9.9",
    "reportlab>=4.4.5",
    "scipy>=1.14.0",
]

[tool.uv]
package = false
